--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="app_name">NotesApp</string>
-    <string name="notes">My Notes</string>
-    <string name="notes_title">Notes Title</string>
-    <string name="notes_sub_title">Notes Sub Title</string>
-    <string name="notes_desc">Enter Note Here</string>
-    <string name="web_url">Enter Web Url</string>
-    <string name="ok">Ok</string>
-    <string name="cancel">Cancel</string>
-    <string name="storage_permission_text">This app needs access to your storage.</string>
-    <string name="search">Search your notes</string>
+    <string name="app_name">Recordando</string>
+    <string name="notes">Notas</string>
+    <string name="notes_title">Título</string>
+    <string name="notes_sub_title">Sub Título</string>
+    <string name="notes_desc">Escreva sua nota aqui</string>
+    <string name="web_url">Insirir Link</string>
+    <string name="ok">Entrar</string>
+    <string name="cancel">Cancelar</string>
+    <string name="storage_permission_text">O aplicativo precisa de acesso ao armazenamento.</string>
+    <string name="search">Pesquisa</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Em Branco!</string>
 </resources>
